<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/background5" >

    <EditText
        android:id="@+id/item_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Type_txt"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/Quantityt_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Quantityt_txt"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Price_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Price_txt"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_btn" />

    <Button
        android:id="@+id/view_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_btn" />

    <Button
        android:id="@+id/Delet_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Delete_btn" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Update_info_txt" />

    <EditText
        android:id="@+id/Update_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Update_txt"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/Update_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Update_btn" />

</LinearLayout>
